// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HomeScreen - unit test homeScreenOptions headerRight 1`] = `
<HeaderButtons
  HeaderButtonComponent={[Function]}
  left={false}
>
  <Item
    color="white"
    iconName="help-circle-outline"
    onPress={[Function]}
    title="help"
  />
</HeaderButtons>
`;

exports[`HomeScreen - unit test homeScreenOptions headerTitle 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
    }
  }
>
  <Text
    style={
      Object {
        "color": "white",
        "fontSize": 20,
      }
    }
  >
    PulmO
  </Text>
  <View
    style={
      Object {
        "top": 5,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "white",
          "fontSize": 18,
        }
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`HomeScreen - unit test homeScreenOptions options 1`] = `
Object {
  "headerRight": [Function],
  "headerTitle": [Function],
  "tabBarIcon": [Function],
}
`;

exports[`HomeScreen - unit test homeScreenOptions tabBarIcon 1`] = `
<Icon
  allowFontScaling={false}
  color="white"
  name="home"
  size={26}
/>
`;

exports[`HomeScreen - unit test should render the active excercise if there is one 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "flex": 1,
            "paddingBottom": 70,
          }
        }
      >
        <View
          style={
            Object {
              "height": 100,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#3e4b57",
                    "fontFamily": "tit-light",
                    "fontSize": 40,
                    "height": 60,
                    "opacity": 1,
                    "textAlignVertical": "center",
                    "textTransform": "lowercase",
                  }
                }
              >
                tap to begin
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderColor": "#002f56",
                "borderRadius": 120,
                "borderWidth": 4,
                "height": 120,
                "justifyContent": "center",
                "opacity": 1,
                "width": 120,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 60,
                  },
                  Object {
                    "color": "#002f56",
                  },
                  Object {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#3e4b57",
              "fontFamily": "tit-light",
              "fontSize": 20,
              "marginTop": 10,
              "opacity": 1,
            }
          }
        >
          selected level: 5
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 20,
              "width": "90%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00b8bb",
                "fontFamily": "tit-regular",
                "fontSize": 22,
                "paddingBottom": 5,
              }
            }
          >
            Endurance Level I
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              inhale & exhale
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              10 times
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              rest for
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              30 seconds
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              rounds
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              4
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 20,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`HomeScreen - unit test should render the default excercise if there is no excercise 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "flexGrow": 1,
      }
    }
  >
    <View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "white",
            "flex": 1,
            "paddingBottom": 70,
          }
        }
      >
        <View
          style={
            Object {
              "height": 100,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={Object {}}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#3e4b57",
                    "fontFamily": "tit-light",
                    "fontSize": 40,
                    "height": 60,
                    "opacity": 1,
                    "textAlignVertical": "center",
                    "textTransform": "lowercase",
                  }
                }
              >
                tap to begin
              </Text>
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "borderColor": "#002f56",
                "borderRadius": 120,
                "borderWidth": 4,
                "height": 120,
                "justifyContent": "center",
                "opacity": 1,
                "width": 120,
              }
            }
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 60,
                  },
                  Object {
                    "color": "#002f56",
                  },
                  Object {
                    "fontFamily": "material-community",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <Text
          style={
            Object {
              "color": "#3e4b57",
              "fontFamily": "tit-light",
              "fontSize": 20,
              "marginTop": 10,
              "opacity": 1,
            }
          }
        >
          selected level: 5
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingBottom": 10,
              "paddingTop": 20,
              "width": "90%",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#00b8bb",
                "fontFamily": "tit-regular",
                "fontSize": 22,
                "paddingBottom": 5,
              }
            }
          >
            Strength Level I
          </Text>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              inhale & exhale
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              10 times
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              rest for
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              60 seconds
            </Text>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Text
              style={
                Object {
                  "borderRightColor": "#CCC",
                  "borderRightWidth": 1,
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "textAlign": "right",
                  "width": "50%",
                }
              }
            >
              rounds
            </Text>
            <Text
              style={
                Object {
                  "color": "#3e4b57",
                  "fontFamily": "tit-light",
                  "fontSize": 17,
                  "opacity": 1,
                  "paddingHorizontal": 10,
                  "paddingTop": 5,
                  "width": "50%",
                }
              }
            >
              4
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "alignItems": "center",
              "marginTop": 20,
              "width": "100%",
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
